[package]
name = "hydro"
version = "0.1.0"
authors = ["ashtneoi <ashtneoi@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "cooperative green tasks"
homepage = "https://github.com/ashtneoi/hydro"
repository = "https://github.com/ashtneoi/hydro"
keywords = ["cooperative", "green", "thread", "task", "fiber"]
categories = ["asynchronous"]
